Alignment fix for bar

--- a/eww/.config/eww/eww.scss
+++ b/eww/.config/eww/eww.scss
@@ -47,7 +47,7 @@ tooltip {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   padding-bottom: 0;
-  padding-top: 4px;
+  padding-top: 1px;
 }
 
 .segment-start,
